fix alignment of location button

--- a/app/assets/styles/asylum/main.css
+++ b/app/assets/styles/asylum/main.css
@@ -602,3 +602,8 @@ h4 {
 
 .checkbox-requirement {
   font-size: 14px; }
+
+/** CITY BUTTON **/
+#location-query .btn {
+  margin-bottom: 0px;
+}
